--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "express-validator": "^5.3.1",
+    "googleapis": "^100.0.0",
     "html-to-text": "^8.1.0",
     "juice": "^8.0.0",
     "mysql2": "^2.3.3",
